# Retrieval_Augmented_Generation

./: .flake8  .gitignore  .mypy.ini  Makefile  README.md  __main__.py  fix_extract.py  fix_prints.py  pyproject.toml  rag.py  test_ts.py
Subjects/: RAG.txt  RAG_Overview.md  RAG_explanations_from_copilot.md  Retrieval_Augmented_Generation_Architecture-v2.md  lesson_2_ingestion_architecture.md  lesson_data_ingestion.md  plan.txt  rag_guide_theo.md  rag_plan.md  rag_precomputation_course.md  real_RAG.md  ressources.txt  subject.md  to_do.md
path_to_save_data/: corpus.mmindex.json  data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/: __init__.py  __main__.py  basemodel_config.py  rag_orchestrator.py  rag_pipeline.py
src/files_kind/: __init__.py  text_class.py
src/files_parser/: __init__.py  base_parser.py  code_parser.py  dict_parser.py  md_parser.py  parser_factory.py  pdf_parser_tabular.py  pdf_parser_text.py  python_parser.py  test.py  text_parser.py
src/files_parser/code_parser/: __init__.py  code_parser.py  python_parser.py
src/hybrid_retrieval/: __init__.py  best_matching_25.py  faiss_matching.py
src/re_ranking/: __init__.py  re_ranker.py
