[project]
name = "RAG"
version = "1.0.0"
description = "42 Retrieval Augmented Generation, by npapot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "transformers>=5.3.0",
    "numpy>= 2.4.1",
    "langchain",
    "tree-sitter<0.22.0",
    "tree-sitter-languages",
    "PyMuPDF",
    "fire",
    "bm25s[full]",
    "PyStemmer",
    "spacy",
    "pdfplumber",
    "faiss-cpu",
    "rank_bm25",
    "sentence-transformers",
    "pyyaml>=6.0.3",
    "tomli>=2.4.1",
    "langchain-text-splitters>=1.1.2",
]
